tests/testFiles/semanticErrors/addnumandstring.meme
ermahgerd b = "hi" + 10;
